# earthgazer

./: .dockerignore  .env.prod.example  .gitignore  CELERY_USAGE_GUIDE.md  CLI_USAGE_GUIDE.md  Dockerfile.prod  LICENSE  README.md  TUI_TO_CLI_MIGRATION_PLAN.md  _version.py  dev_requirements.txt  docker-compose.prod.yml  earthgazer.db  pyproject.toml  requirements.txt  tox.ini
.devcontainer/: .env.example  Dockerfile  devcontainer.json  docker-compose.yml
.githooks/: pre-commit  pre-push
alembic/: env.py
alembic/versions/: 3d91bbc55add_add_region_bounds_to_location_model.py  6ecaf4547213_create_locations_table.py  7e8016d0403e_add_processed_images_table.py  827538c95467_add_task_tracking_tables.py  9af239edfa95_update_string_lengths.py  e77931b840a7_update_location_columns_and_add_capture_.py
docs/: workflow-diagram.md  workflow-lucidchart.xml
earthgazer/: __init__.py  __main__.py  celery_app.py  monitoring.py  settings.py  tasks.py  workflows.py
earthgazer/cli/: __init__.py  main.py  services.py  utils.py
earthgazer/cli/commands/: __init__.py  captures.py  locations.py  monitoring.py  status.py  workflows.py
earthgazer/cli/formatters/: __init__.py  json_output.py  status.py  tables.py
earthgazer/database/: definitions.py  session.py
earthgazer/processing/: __init__.py  analysis.py  discovery.py  download.py  features.py  io.py  preprocessing.py  retrieval.py  tracking.py  upload.py
earthgazer/tui/: __init__.py  app.py  services.py  styles.tcss
earthgazer/tui/screens/: __init__.py  captures.py  dashboard.py  monitoring.py  workflows.py
earthgazer/tui/widgets/: __init__.py
helm/earthgazer/: .helmignore  Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values-secrets.example.yaml  values.yaml
helm/earthgazer/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  networkpolicy.yaml  pvc.yaml  secret.yaml  serviceaccount.yaml
helm/earthgazer/templates/flower/: deployment.yaml  ingress.yaml  service.yaml
helm/earthgazer/templates/postgresql/: migration-job.yaml  secret.yaml  service.yaml  statefulset.yaml
helm/earthgazer/templates/redis/: secret.yaml  service.yaml  statefulset.yaml
helm/earthgazer/templates/workers/: deployment-cpu.yaml  deployment-default.yaml  deployment-io.yaml  hpa.yaml
scripts/: start_cpu_worker.sh  start_io_worker.sh  start_worker.sh  timeseries.py
src/earthgazer/: __about__.py  __main__.py  big_query.py  logger.py
src/earthgazer/env_management/: database.py  logger.py  settings.py
src/earthgazer/objects/: __init__.py  hyperspectral_image.py  location.py
timeseries/: FINDINGS.md  metadata.csv  validation_metrics.json
